--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Your Name's Personal Website</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h2>Currently Working on It</h2>
+
+<header>
+    <h1>Welcome to My Personal Website</h1>
+    <h3 style="color: red;">Devolopment Under Process</h3>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
+
+<section id="about">
+    <h2>About Me</h2>
+    <p>Hi! I'm <b>Hiran S</b>, currently a student in RSET. I love <b>Devolope Games</b>. This is my personal website where I share my projects and thoughts.</p>
+</section>
+
+<section id="projects">
+    <h2>Projects</h2>
+    <ul>
+        <li><strong>Minecraft:</strong> a project to create a copy of minecraft</li>
+        <li><strong>Maze:</strong> a procedural generatedd game</li>
+        <li><strong>FindLostFound:</strong> for the college</li>
+    </ul>
+</section>
+
+<section id="contact">
+    <h2>Contact Me</h2>
+    <p>You can reach me at: <a href="mailto:hirans2006@gmail.com">your.email@example.com</a></p>
+</section>
+
+<footer>
+    <p>&copy; 2024 Hiran. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
