--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <section id="about">
     <h2>About Me</h2>
-    <p>Hi! I'm <b>Hiran S</b>, currently a student in RSET. I love <b>Devolope Games</b>. This is my personal website where I share my projects and thoughts.</p>
+    <p>Hi! I'm <b>Hiran S</b>, currently a student in RSET. I love <b>Devoloping Games</b>. This is my personal website where I share my projects and thoughts.</p>
 </section>
 
 <section id="projects">
@@ -34,7 +34,7 @@
 
 <section id="contact">
     <h2>Contact Me</h2>
-    <p>You can reach me at: <a href="mailto:hirans2006@gmail.com">your.email@example.com</a></p>
+    <p>You can reach me at: <a href="mailto:hirans2006@gmail.com">hirans2006@gmail.com</a></p>
 </section>
 
 <footer>
