--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h2>Projects</h2>
     <ul>
         <li><strong>Minecraft:</strong> a project to create a copy of minecraft</li>
-        <li><strong>Maze:</strong> a procedural generatedd game</li>
+        <li><strong>Maze:</strong> a procedural generated game</li>
         <li><strong>FindLostFound:</strong> for the college</li>
     </ul>
 </section>
