--- a/about.html
+++ b/about.html
@@ -17,6 +17,24 @@
                 <p>Do you want know about me...!</p>
             </div>
         </div>
+        <div class="content">
+            <div style="width: 61%; background-color: cyan;">
+                <h3>Currently</h3>
+                <p>I am currently leaning at <a href="https://www.rajagiritech.ac.in/Home/Index.asp"><b>Rajagiri School Of Engineering</b></a>. I am first year <b>B.TECH</b>, <b>Computer Science and Engineering</b>
+                Student.</p>
+            </div>
+            <div style="width: 39%; background-color: yellow;">
+                <h3>Address</h3>
+                <p>
+                Hiran.S,<br>
+                Sudhalayam,
+                Meppayil.P.O,<br>
+                Vadakara,
+                Kozikode,<br>
+                673104
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
