--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="resume">
         <div class="main">
-            <img src="hirans.jpg" alt="">
+            <img src="./private img/hirans.jpg" alt="">
             <div class="short">
                 <h2>Hiran.S</h2>
                 <div class="tag"><span>Full Stack Web Dev</span><span class="seaparator">|</span><span>Game Dev</span></div>
